[package]
name = "json-rs"
version = "0.1.1"
description = "Lightweight JSON reader and writer, written in pure rust."
authors = ["HilbertCurve", "spacefillingcurve35@gmail.com"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/HilbertCurve/json-rs"
homepage = "https://github.com/HilbertCurve/json-rs"
keywords = ["json"]
categories = ["development-tools", "parser-implementations", "parsing"]
readme = "README.md"
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]